--- a/pipelines_for_hipergator/fr1_project_snakefiles/workflow/Snakefile
+++ b/pipelines_for_hipergator/fr1_project_snakefiles/workflow/Snakefile
@@ -4,6 +4,11 @@
 include: "rules/common.smk"
 include: "rules/trim.smk"
 include: "rules/fastqc.smk"
+include: "rules/align.smk"
+include: "rules/gatk_indel.smk"
+include: "rules/samtools_index.smk"
+include: "rules/samtools_rmdup.smk"
+include: "rules/samtools_sort.smk"
 
 #rule all:
 #    input:
@@ -65,9 +70,29 @@ def all_input(wildcards):
     wanted_input.extend(
         expand(
             [
-                "results/fastqc_out/post_trim/{sample}-{unit}/"
+                "results/mapped_bwamem/{sample}-{unit}.bam"
             ],
                 sample=units["sample"],unit=units["unit"]
+        )
+    )
+
+    wanted_input.extend(
+        expand(
+            [
+                "results/mapped_bwamem/{sample}-{unit}.bam"
+            ],
+                sample=units["sample"],unit=units["unit"]
+        )
+
+    )
+
+    wanted_input.extend(
+        expand(
+            [
+                "realigned/{sample}-{unit}.sorted.rmdup.realigned.bam.bai"
+            ],
+                sample=units["sample"],unit=units["unit"]
+
         )
 
     )
