working on fixing align.smk

--- a/pipelines_for_hipergator/fr1_project_snakefiles/config/config.yaml
+++ b/pipelines_for_hipergator/fr1_project_snakefiles/config/config.yaml
@@ -19,6 +19,8 @@ settings:
         "V1_01"
     full_or_custom:
         "custom"
+    aligner:
+        "bwa_mem"
     mosaik_seq_param:
         "illumina"
 
