--- a/pipelines_for_hipergator/fr1_project_snakefiles/workflow/Snakefile
+++ b/pipelines_for_hipergator/fr1_project_snakefiles/workflow/Snakefile
@@ -5,10 +5,13 @@ include: "rules/common.smk"
 include: "rules/trim.smk"
 include: "rules/fastqc.smk"
 include: "rules/align.smk"
-include: "rules/gatk_indel.smk"
-include: "rules/samtools_index.smk"
-include: "rules/samtools_rmdup.smk"
-include: "rules/samtools_sort.smk"
+#include: "rules/samtools_sort.smk"
+#include: "rules/samtools_rmdup.smk"
+#include: "rules/samtools_index.smk"
+#include: "rules/gatk_indel.smk"
+
+
+
 
 #rule all:
 #    input:
@@ -70,32 +73,22 @@ def all_input(wildcards):
     wanted_input.extend(
         expand(
             [
-                "results/mapped_bwamem/{sample}-{unit}.bam"
+                "results/" + config["settings"]["aligner"] + "_mapped/{sample}-{unit}.bam"
             ],
                 sample=units["sample"],unit=units["unit"]
         )
     )
 
-    wanted_input.extend(
-        expand(
-            [
-                "results/mapped_bwamem/{sample}-{unit}.bam"
-            ],
-                sample=units["sample"],unit=units["unit"]
-        )
+    #wanted_input.extend(
+    #    expand(
+    #        [
+    #            "results/sorted/{sample}-{unit}.sorted.bam"
+    #        ],
+    #            sample=units["sample"],unit=units["unit"]
+    #
+    #    )
 
-    )
-
-    wanted_input.extend(
-        expand(
-            [
-                "results/realigned/{sample}-{unit}.sorted.rmdup.realigned.bam.bai"
-            ],
-                sample=units["sample"],unit=units["unit"]
-
-        )
-
-    )
+    #)
 
     return wanted_input
 
