--- a/pipelines_for_hipergator/fr1_project_snakefiles/workflow/Snakefile
+++ b/pipelines_for_hipergator/fr1_project_snakefiles/workflow/Snakefile
@@ -73,7 +73,7 @@ def all_input(wildcards):
     wanted_input.extend(
         expand(
             [
-                "results/" + config["settings"]["aligner"] + "_mapped/{sample}-{unit}.bam"
+                "results/mapped/{sample}-{unit}.bam"
             ],
                 sample=units["sample"],unit=units["unit"]
         )
