--- a/pipelines_for_hipergator/fr1_project_snakefiles/workflow/Snakefile
+++ b/pipelines_for_hipergator/fr1_project_snakefiles/workflow/Snakefile
@@ -6,10 +6,12 @@ include: "rules/trim.smk"
 include: "rules/fastqc.smk"
 include: "rules/align.smk"
 include: "rules/merge_bams.smk"
+include: "rules/RG_replaced.smk"
 include: "rules/samtools_sort.smk"
 include: "rules/samtools_rmdup.smk"
 include: "rules/samtools_index.smk"
 include: "rules/gatk_indel.smk"
+include: "rules/freebayes.smk"
 
 def all_input(wildcards):
     """
@@ -33,43 +35,13 @@ def all_input(wildcards):
     wanted_input.extend(
         expand(
             [
-                "results/logs/fastqc_pre_out/{sample}-{unit}.log"
+                "results/realigned/{sample}.realigned.bam.bai"
             ],
-                sample=units["sample"],unit=units["unit"]
-
-        )
-
-    )
-
-    wanted_input.extend(
-        expand(
-            [
-                "results/trimmed/{sample}-{unit}.trimmed.R1.fastq.gz",
-                "results/trimmed/{sample}-{unit}.trimmed.R2.fastq.gz"
-            ],
-                sample=units["sample"],unit=units["unit"]
-        )
-
-    )
-
-    wanted_input.extend(
-        expand(
-            [
-                "results/mapped/{sample}-{unit}.bam"
-            ],
-                sample=units["sample"],unit=units["unit"]
+                sample=units["sample"]
         )
     )
 
-    wanted_input.extend(
-        expand(
-            [
-                "results/realigned/{sample}.sorted.rmdup.realigned.bam.bai"
-            ],
-                sample=units["sample"],unit=units["unit"]
-        )
-
-    )
+    wanted_input.extend(["results/calls/freebayes/Fr1_megs.freebayes.vcf"])
 
     return wanted_input
 
