--- a/pipelines_for_hipergator/fr1_project_snakefiles/workflow/Snakefile
+++ b/pipelines_for_hipergator/fr1_project_snakefiles/workflow/Snakefile
@@ -12,6 +12,8 @@ include: "rules/samtools_rmdup.smk"
 include: "rules/samtools_index.smk"
 include: "rules/gatk_indel.smk"
 include: "rules/freebayes.smk"
+include: "vcf_util.smk"
+include: "rules/mosdepth.smk"
 
 def all_input(wildcards):
     """
@@ -42,6 +44,9 @@ def all_input(wildcards):
     )
 
     wanted_input.extend(["results/calls/freebayes/Fr1_megs.freebayes.vcf"])
+
+    wanted_input.extend(["results/calls/postprocessed/Fr1_megs.freebayes.postprocess.vcf"])
+    wanted_input.extend(["results/calls/postprocessed/Fr1_diploid.freebayes.postprocess.vcf"])
 
     return wanted_input
 
