--- a/pipelines_for_hipergator/fr1_project_snakefiles/workflow/Snakefile
+++ b/pipelines_for_hipergator/fr1_project_snakefiles/workflow/Snakefile
@@ -12,8 +12,10 @@ include: "rules/samtools_rmdup.smk"
 include: "rules/samtools_index.smk"
 include: "rules/gatk_indel.smk"
 include: "rules/freebayes.smk"
-include: "vcf_util.smk"
-include: "rules/mosdepth.smk"
+include: "rules/vcf_util.smk"
+include: "rules/vcf_012_convert.smk"
+include: "rules/gall_vs_nogall_rrBLUP_GWAS.smk"
+#include: "rules/mosdepth.smk"
 
 def all_input(wildcards):
     """
@@ -43,10 +45,13 @@ def all_input(wildcards):
         )
     )
 
-    wanted_input.extend(["results/calls/freebayes/Fr1_megs.freebayes.vcf"])
+    #wanted_input.extend(["results/calls/freebayes/Fr1_megs.freebayes.vcf"])
 
-    wanted_input.extend(["results/calls/postprocessed/Fr1_megs.freebayes.postprocess.vcf"])
-    wanted_input.extend(["results/calls/postprocessed/Fr1_diploid.freebayes.postprocess.vcf"])
+    #wanted_input.extend(["results/calls/postprocessed/Fr1_megs.freebayes.postprocess.vcf"])
+    #wanted_input.extend(["results/calls/postprocessed/Fr1_diploid.freebayes.postprocess.vcf"])
+
+    wanted_input.extend(["results/GWAS/rrBLUP/rrBLUP.manhattanplot.pdf"])
+    wanted_input.extend(["mosdepth/mosdepth.bwa_mem.report.txt"])
 
     return wanted_input
 
